--- a/nxt/money-ai-app/server/.env
+++ b/nxt/money-ai-app/server/.env
@@ -2,8 +2,8 @@
 PORT=3000
 
 # Razorpay Configuration (From your Razorpay Dashboard)
-RAZORPAY_KEY_ID=rzp_test_RH9cioD0FdwrCn
-RAZORPAY_KEY_SECRET=5iZ8Nbc30mjbc7iZ420CPDIt
+RAZORPAY_KEY_ID=your_razorpay_id
+RAZORPAY_KEY_SECRET=your_key
 
 # Gemini API Configuration (From Google AI Studio)
-GEMINI_API_KEY=AIzaSyCIURneXAKwmGGSmFGyH3qarRohWdPxbQc
+OPENAI_API_KEY=your_key
